# MonkSoft-Login-App-Android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  data.pb.cc  data.pb.h  data.proto  native-lib.cpp
app/src/main/java/com/monksoft/monklogin/data/dataBase/: UserDataBase.kt
app/src/main/java/com/monksoft/monklogin/data/dataBase/dao/: UserDao.kt
app/src/main/java/com/monksoft/monklogin/data/dataBase/entities/: UserEntity.kt
app/src/main/java/com/monksoft/monklogin/data/repository/: ProtoRepository.kt  ProtoSerializer.kt  UserRepository.kt
app/src/main/java/com/monksoft/monklogin/presentation/view/: DialogFragment.kt  LoginFragment.kt  MainActivity.kt  WelcomeFragment.kt
app/src/main/java/com/monksoft/monklogin/presentation/viewModel/: ProtoViewModel.kt  UserViewModel.kt
app/src/main/java/com/monksoft/monklogin/utils/: Constants.kt  EncryptDecrypt.java  Preferences.kt
app/src/main/proto/: data.proto
app/src/main/res/drawable/: ic_error.xml
app/src/main/res/drawable-v24/: bg_tittle_bottom.xml
app/src/main/res/layout/: activity_main.xml  fragment_dialog.xml  fragment_login.xml  fragment_welcome.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/monksoft/monklogin/: EncryptDecryptTest.java
gradle/wrapper/: gradle-wrapper.properties
